# vqvaes

./: README.md  pyproject.toml
data/: nouns.py
notebooks/: nouns.ipynb  overfit.ipynb  vq.ipynb  vqvae2.ipynb  vqvae_results.ipynb  vqvae_results_ema.ipynb
scripts/: download_nouns_dataset.py  train_vqvae.py
vqvaes/: evals.py  loss.py  results.py  trainer.py  utils.py  vq.py  vqgan.py  vqvae.py  vqvae2.py
vqvaes/models/: __init__.py  layers.py  residual.py  vq.py  vqvae.py  vqvae2.py
