[tool.poetry]
name = "vqvaes"
version = "0.1.0"
description = ""
authors = ["Eric Chen <eric.chen@backflip.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
datasets = "^2.20.0"
torch = "^2.3.1"
torchvision = "^0.18.1"
ipykernel = "^6.29.4"
einops = "^0.8.0"
matplotlib = "^3.9.0"
tensorboard = "^2.17.0"
numpy = "1.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
